# teachur5_code

./: .gitignore  README.md  single_arm_README.md
src/PWS/: record.sh  roblaunch.sh  screwlaunch.sh  singlelaunch.sh
src/dual_arm/Universal_Robots_ROS_Driver/ur_robot_driver/: CMakeLists.txt
src/dual_arm/Universal_Robots_ROS_Driver/ur_robot_driver/config/: left_am_controllers.yaml  right_am_controllers.yaml  rosconsole.config  ur5e_controllers.yaml
src/dual_arm/Universal_Robots_ROS_Driver/ur_robot_driver/launch/: dual_ur_bringup.launch  dual_ur_common.launch  dual_ur_control.launch  ur5e_bringup.launch  (+2 more)
src/dual_arm/adp1000/: CMakeLists.txt  package.xml
src/dual_arm/adp1000/scripts/: adp1000.py
src/dual_arm/arm_robot/arm_robot_description/: CMakeLists.txt  package.xml
src/dual_arm/arm_robot/dual_moveit_config/: CMakeLists.txt  package.xml
src/dual_arm/arm_robot/single_robot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/dual_arm/balance_com/: CMakeLists.txt  package.xml
src/dual_arm/balance_com/launch/: Balance_com.launch
src/dual_arm/balance_com/scripts/: balance_com.py
src/dual_arm/balance_com/src/: balance_test.cpp
src/dual_arm/dashboard/: CMakeLists.txt  package.xml
src/dual_arm/dashboard/src/: dashboard.cpp
src/dual_arm/gripper_modbus/: CMakeLists.txt  package.xml
src/dual_arm/gripper_modbus/launch/: Gripper_ModbusControl.launch
src/dual_arm/gripper_modbus/scripts/: Gripper_ModbusControl.py  gripper_gui.py
src/dual_arm/gripper_modbus/src/: pgitest.cpp
src/dual_arm/gripper_modbus/srv/: Balance.srv  Gripper.srv
src/dual_arm/manipulator/: CMakeLists.txt  package.xml
src/dual_arm/manipulator/collision_objects/: base_link.stl  bowl.stl  box.scene  conveyor.stl  new.scene  strech.scene  virual.scene
src/dual_arm/manipulator/config/: JR.rviz  dual_arm_moveit.rviz  single_arm_moveit.rviz  test.rviz
src/dual_arm/manipulator/data/: robot_JP.json
src/dual_arm/manipulator/launch/: A_robot_start.launch  B_JP_record.launch  dual_arm_rviz.launch  single_arm_rviz.launch
src/dual_arm/manipulator/scripts/: fake_command.py
src/dual_arm/manipulator/src/: A_manipulator.cpp  B_record.cpp  exp_capsulation.cpp  robot_arm.cpp  robot_capsulation.cpp  station_func.cpp  universal_tools.cpp
src/dual_arm/universal_robot/ur5e_moveit_config/: package.xml
src/dual_arm/universal_robot/ur_gazebo/: CMakeLists.txt
src/js_control/: CMakeLists.txt  package.xml
src/js_control/include/js_control/: joystick_control.h
src/js_control/launch/: js_control.launch
src/js_control/src/: joystick_control.cpp  joystick_main.cpp  z_axis_control.cpp
src/locatornew/: CMakeLists.txt  package.xml  setup.py
src/locatornew/launch/: location_service.launch
src/locatornew/scripts/: README.md  analyze.py  calculate_rotate.py  location_service.py  matrix_utils.py  robot_controller.py
src/locatornew/scripts/config/: example.json  紫外光谱仪.json  自动进样天平.json  通风橱.json
src/locatornew/scripts/img_take/: capture-log.txt  mean_bTt.txt  pose.txt
src/locatornew/scripts/matrix/: left_camera_matrix.txt  left_dist_coeffs.txt  left_gTc.txt  oneloc_bTt.txt
src/locatornew/srv/: Location.srv
src/selfdefined_trajectory_controller/cfg/: selfdefinedController.cfg
src/selfdefined_trajectory_controller/include/selfdefined_trajectory_controller/: selfdefined_admit_controller.h  selfdefined_admit_controller_impl.h  selfdefined_trajectory_controller.h  selfdefined_trajectory_controller_impl.h
(+113 files in other folders)
